# XenoScan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  XenoScan.sln  buildclean.bat  buildmsvc.bat  buildmsvc2010.bat  buildmsvc2012.bat  buildmsvc2013.bat  buildmsvc2015.bat  buildmsvc2017.bat  buildmsvc2017x64.bat  makevs2010.bat
src/: Assert.h  BasicTest.cpp  BasicTest.h  CMakeLists.txt  FastAllocator.cpp  FastAllocator.h  LuaEngine.cpp  LuaEngine.h  LuaEngineExports.cpp  LuaPrimitive.cpp  LuaPrimitive.h  LuaVariant.h  ScanResult.h  ScanState.h  ScanVariant.cpp  ScanVariant.h  ScanVariantTypeTraits.h  Scanner.cpp  Scanner.h  ScannerDataStructureBlueprint.cpp  ScannerDataStructureBlueprint.h  ScannerTarget.h  ScannerTargetWindows.cpp  ScannerTargetWindows.h  ScannerTest.cpp  ScannerTest.lua  TestBase.cpp  TestRunner.cpp  TypeSystemTest.lua  XenoScan.vcxproj  XenoScan.vcxproj.filters  lib.lua  main.cpp  testlib.lua
src/XenoLua/: CMakeLists.txt  LuaPrimitive.cpp  LuaPrimitive.h  LuaVariant.h  XenoLua.vcxproj  XenoLua.vcxproj.filters
src/XenoScanEngine/: Assert.h  BoundingList.h  CMakeLists.txt  ConsoleProgressTracker.h  DataStructureBlueprint.cpp  DataStructureBlueprint.h  FastAllocator.h  KeyedFactory.h  LuaEngine.cpp  NativeClassInstanceBlueprint.h  RangeList.h  ScanResult.h  ScanState.h  ScanVariant.cpp  ScanVariant.h  ScanVariant.natvis  ScanVariantComparator.h  ScanVariantSearchContext.h  ScanVariantSearchContextDefault.h  ScanVariantSearchContextString.h  ScanVariantTypeTraits.cpp  ScanVariantTypeTraits.h  ScanVariantTypeTraits.hpp  Scanner.cpp  Scanner.h  ScannerDataStructureBlueprint.cpp  ScannerDataStructureBlueprint.h  ScannerTarget.cpp  ScannerTarget.h  ScannerTargetDolphin.cpp  ScannerTargetDolphin.h  ScannerTargetHelper.h  ScannerTargetWindows.cpp  ScannerTargetWindows.h  ScannerTargetWindowsBase.cpp  ScannerTargetWindowsBase.h  ScannerTargetWindowsDuplicate.cpp  ScannerTargetWindowsDuplicate.h  ScannerTargetWindowsStandard.cpp  ScannerTargetWindowsStandard.h  (+20 more)
src/XenoScanLua/: CMakeLists.txt  LuaEngine.cpp  LuaEngine.h  LuaEngineExports.cpp  ScannerTest.cpp  ScannerTest.h  ScannerTest.lua  TestBase.h  TypeSystemTest.lua  XenoScanLua.vcxproj  XenoScanLua.vcxproj.filters  lib.lua  main.cpp  testlib.lua
